--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,7 +1,6 @@
 .home-header-container {
-    height: 100px;
+    height: 90px;
     width: 100%;
-    padding: 0 5%;
     background-color: transparent;
     display: flex;
     align-items: center;
@@ -12,8 +11,9 @@
         height: 100%;
         width: 100%;
         display: flex;
+     //   background-color: #236646;
         .left-content {
-            width: 13%;
+            width: 20%;
             display: flex;
             align-items: center;
             .header-logo {
@@ -22,12 +22,11 @@
                 height: 90%;
                 width: 100%;
                 background-size: contain;
-                margin-left: 10px;
                 cursor: pointer;
             }
         }
         .center-content {
-            width: 60%;
+            width: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -56,6 +55,34 @@
                     font-size: 18px;
                 }
             }
+        }
+
+        .right-content {
+            width: 30%;
+            display: flex;
+            float: right;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            gap: 5px;
+            .btn {
+                display: flex;
+                align-items: center;
+                // background: transparent;
+                // border: transparent;
+                border-radius: 30px;
+                cursor: pointer;
+                font-size: 20px;
+                color: #fbfbfb;
+                // transition: background-color 0.3s ease;
+                height: 40px;
+                padding: 15px 25px;
+               background-color: #359381;
+                i {
+                    margin-right: 6px;
+                    font-size: 19px;
+                }
+            }
             .dropdown {
                 width: 10%;
                 min-width: 40px;
@@ -77,7 +104,7 @@
                     cursor: pointer;
                     
                     i{
-                        color: #359381;
+                        color: #f75d5d;
                         margin-right: 3px;
                     }
                 }
@@ -108,9 +135,8 @@
                     
                 }
             }
+            
         }
-        .right-content {
-            width: 20%;            
-        }
+       
     }
 }
