--- a/src/containers/System/UserManage.scss
+++ b/src/containers/System/UserManage.scss
@@ -1,12 +1,12 @@
 #customers {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family    : Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width          : 100%;
 }
 
 #customers td,
 #customers th {
-    border: 1px solid #ddd;
+    border : 1px solid #ddd;
     padding: 8px;
 }
 
@@ -19,69 +19,71 @@
 }
 
 #customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #04aa6d;
-    color: white;
+    padding-top     : 12px;
+    padding-bottom  : 12px;
+    text-align      : left;
+    background-color: #04AA6D;
+    color           : white;
 }
+
 .btn-edit {
-    margin-right: 8px;
-    width: 50px;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    cursor: pointer;
-    color: rgb(153, 100, 0);
+    width     : 50px;
+    border    : none;
+    outline   : none;
+    background: transparent;
+    color     : orange;
+
     &:hover {
         background-color: transparent !important;
-        color: rgb(105, 68, 0);
+        color           : orange !important;
     }
 }
+
 .btn-delete {
-    width: 25px;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    cursor: pointer;
-    color: rgb(153, 0, 0);
+    width     : 50px;
+    border    : none;
+    outline   : none;
+    background: transparent;
+    color     : red;
+
     &:hover {
         background-color: transparent !important;
-        color: rgb(105, 0, 0);
+        color           : red !important;
     }
 }
+
 .modal-user-container {
-  .modal-content{
-    .modal-header{
-      justify-content: space-between;
-      button{
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-        color: white;
-        font-size: 27px;
-      }
-    }
-  }
-    .modal-user-body {
-        display: flex;
-        gap: 15px;
-        flex-wrap: wrap;
-        .input-container {
-            display: flex;
-            flex-direction: column;
-            width: calc(100% / 2 - 10px);
-        
-        &.input-container-full {
-            width: 100%;
+    .modal-content {
+        .modal-header {
+            button {
+                background-color: transparent !important;
+                color           : white;
+                border          : none;
+                font-size       : 27px;
+            }
         }
-            .form-control {
+    }
+
+    .modal-user-body {
+        display  : flex;
+        gap      : 15px;
+        flex-wrap: wrap;
+
+        .input-container {
+            display       : flex;
+            flex-direction: column;
+            width         : 49%;
+
+            &.max-width-input {
+                width: 100%;
+            }
+
+            input {
                 border-radius: 3px;
-                border: 1px solid rgba(128, 128, 128, 0.773);
-                height: 33px;
-                outline: none;
-                padding: 0 10px;
-                
+                border       : 1px solid grey;
+                height       : 30px;
+                outline      : none;
+                padding      : 0 10px;
             }
         }
     }
