--- a/src/containers/About/AboutUs.scss
+++ b/src/containers/About/AboutUs.scss
@@ -1,35 +1,34 @@
-
-
 .about-container {
-	.transparent{
-		background-color: transparent;
-		height: 90px;
-		width: 100%;
+	.transparent {
+		background-color: #FFFFFF;
+		height          : 90px;
+		width           : 100%;
 	}
+
 	.about-banner {
-		
+
 		margin               : 0;
 		padding              : 0;
 		background-image     : url('../../assets/images/bg-about.jpg');
 		width                : 100%;
-		height               : 390px;
+		height               : 490px;
 		background-position  : center center;
 		background-repeat    : no-repeat;
 		background-size      : cover;
 		background-attachment: fixed;
 
 		.content-up {
-			background-image: linear-gradient(rgba(61, 91, 72, 0.5), rgba(12, 53, 14, 0.5));
+			background-image: linear-gradient(rgba(67, 78, 71, 0.5), rgba(3, 22, 4, 0.5));
 			height          : 490px;
 		}
 
 		h1 {
-			color     : white;
-			font-size : 55px;
-			font-weight: 800;
-			margin-top: 150px;
+			color      : white;
+			font-size  : 60px;
+			font-weight: 760;
+			margin-top : 180px;
 			margin-left: 166px;
-			float     : left;
+			float      : left;
 
 		}
 	}
