--- a/src/containers/About/Section/WhyYouSupport.scss
+++ b/src/containers/About/Section/WhyYouSupport.scss
@@ -5,18 +5,24 @@
 	width                : 92%;
 	background-image     : url("../../../assets/images/WhyYouSupport-bg.jpg") !important;
 	background-repeat    : no-repeat;
+
 	background-attachment: fixed !important;
 	background-size      : cover;
 	position             : relative !important;
 	background-position  : center;
 
 	.WhyYouSupport-container {
-		background-image: linear-gradient(rgba(18, 64, 33, 0.5), rgba(1, 33, 3, 0.5));
-		height          : 100%;
+		background-image: linear-gradient(rgba(93, 102, 95, 0.68), rgba(0, 0, 0,0.97 ));
+		height: 100%;
+		width: 100%;
+		background-color: #00090052;
+		justify-content: center;
+		align-items: center;
+		font-family: "futura light bt";
 
 		.WhyYouSupport-bg {
 			height: 100%;
-
+			filter: drop-shadow(2px 4px 6px black);
 			.content-top {
 				height: 40%;
 
