--- a/src/containers/About/Section/StartYourCacbon.scss
+++ b/src/containers/About/Section/StartYourCacbon.scss
@@ -92,6 +92,7 @@
 						background-color: #45625D;
 						color           : white;
 						border          : none;
+						
 						margin-top      : 40px;
 					}
 				}
@@ -136,6 +137,7 @@
 						background-color: #45625D;
 						color           : white;
 						border          : none;
+						font-weight: 900 !important;
 						margin-top      : 40px;
 					}
 				}
@@ -174,6 +176,7 @@
 					}
 
 					.contact-us {
+						font-weight: 900 !important;
 						height          : 35px;
 						width           : 190px;
 						border-radius   : 5%;
