--- a/src/containers/About/Section/StartYourCacbon.scss
+++ b/src/containers/About/Section/StartYourCacbon.scss
@@ -85,6 +85,7 @@
 					}
 
 					.calculate-now {
+						font-weight: 900 !important;
 						height          : 35px;
 						width           : 190px;
 						border-radius   : 5%;
@@ -92,7 +93,6 @@
 						background-color: #45625D;
 						color           : white;
 						border          : none;
-						
 						margin-top      : 40px;
 					}
 				}
