--- a/src/containers/Donate/Section/DonateLarge.scss
+++ b/src/containers/Donate/Section/DonateLarge.scss
@@ -3,7 +3,7 @@
 	width          : 100%;
 	justify-content: center;
 	display        : flex;
-	align-items  : center; 
+	align-items    : center;
 
 	.donateLarge-content {
 		height         : 95%;
@@ -46,6 +46,7 @@
 					height          : 55px;
 					width           : 196px;
 					background-color: #3a8b66;
+					border          : none;
 				}
 			}
 		}
