--- a/src/containers/About/Section/WhyYouSupport.scss
+++ b/src/containers/About/Section/WhyYouSupport.scss
@@ -11,17 +11,18 @@
 	background-position  : center;
 
 	.WhyYouSupport-container {
-		background-image: linear-gradient(rgba(93, 102, 95, 0.68), rgba(0, 0, 0,0.97 ));
-		height: 100%;
-		width: 100%;
+		background-image: linear-gradient(rgba(93, 102, 95, 0.68), rgba(0, 0, 0, 0.97));
+		height          : 100%;
+		width           : 100%;
 		background-color: #00090052;
-		justify-content: center;
-		align-items: center;
-		font-family: "futura light bt";
+		justify-content : center;
+		align-items     : center;
+		font-family     : "futura light bt";
 
 		.WhyYouSupport-bg {
 			height: 100%;
 			filter: drop-shadow(2px 4px 6px black);
+
 			.content-top {
 				height: 40%;
 
@@ -51,7 +52,7 @@
 			height : 60%;
 
 			p {
-				font-family  : cursive;
+				font-family  : 'Poppins';
 				color        : white;
 				font-weight  : 500;
 				text-align   : -webkit-center;
@@ -62,6 +63,7 @@
 				line-height  : inherit;
 				margin-bottom: auto;
 				height       : 60%;
+				margin-top   : 35px;
 				padding-left : 300px;
 			}
 		}
