--- a/src/containers/Donate/Section/Donate.scss
+++ b/src/containers/Donate/Section/Donate.scss
@@ -59,11 +59,12 @@
 						margin-left     : 77px;
 						height          : 55px;
 						color           : #ffffffed;
-						border-radius   : 8%;
+						border-radius   : 7%;
 						width           : 250px;
 						font-weight     : 600;
 						background-color: #378652;
 						font-size       : 16px;
+						border          : none;
 					}
 				}
 			}
