--- a/src/containers/System/Donation/CartManage.scss
+++ b/src/containers/System/Donation/CartManage.scss
@@ -50,7 +50,7 @@
         color: rgb(105, 0, 0);
     }
 }
-.modal-donation-container {
+.modal-cart-container {
     font-family: Arial, Helvetica, sans-serif;
   .modal-content{
     .modal-header{
@@ -64,7 +64,7 @@
       }
     }
   }
-    .modal-donation-body {
+    .modal-cart-body {
         display: flex;
         gap: 15px;
         flex-wrap: wrap;
