--- a/src/containers/Donate/CheckOut/Section/Cart.scss
+++ b/src/containers/Donate/CheckOut/Section/Cart.scss
@@ -1,11 +1,12 @@
 .Cart-container {
 	width : 100%;
-	height: 900px;
+	height: 100%;
 
 
 	.banner {
 		height: 90px;
 		color : white;
+		border-bottom: 1px solid #359381;
 	}
 
 	.cart_content {
@@ -54,15 +55,15 @@
 							width     : 100%;
 							margin-top: 20px;
 
-							.cart_item_img {
-								background-image     : url("../../../../assets/images/parrot.png") !important;
-								background-repeat    : no-repeat;
-								background-attachment: local !important;
-								background-size      : contain;
-								background-position  : center;
-								height               : 80px;
-								width                : 60px;
-							}
+							// .cart_item_img {
+							
+							// 	background-repeat    : no-repeat;
+							// 	background-attachment: local !important;
+							// 	background-size      : contain;
+							// 	background-position  : center;
+							// 	height               : 80px;
+							// 	width                : 60px;
+							// }
 
 							.cart_item_wrap {
 								display       : flex;
