--- a/src/containers/Donate/CheckOut/Section/Cart.scss
+++ b/src/containers/Donate/CheckOut/Section/Cart.scss
@@ -4,9 +4,9 @@
 
 
 	.banner {
-		height: 90px;
-		color : white;
-		border-bottom: 1px solid #359381;
+		height    : 90px;
+		color     : white;
+		box-shadow: 9px 1px 8px #3a9987;
 	}
 
 	.cart_content {
@@ -56,7 +56,7 @@
 							margin-top: 20px;
 
 							// .cart_item_img {
-							
+
 							// 	background-repeat    : no-repeat;
 							// 	background-attachment: local !important;
 							// 	background-size      : contain;
@@ -293,12 +293,13 @@
 
 					.email_container {
 						.email_input {
+							font-size    : 16px;
 							width        : 774px;
 							height       : 48px;
 							background   : #f5f3f3;
 							border-radius: 9px;
-							border: 1px solid gray;
-							padding: 0 14px;
+							border       : 1px solid gray;
+							padding      : 0 14px;
 						}
 					}
 				}
@@ -309,13 +310,13 @@
 
 					.right_checkout_button {
 						.checkout_button {
-							border: none;
-							font-weight: 600;
-							height: 45px;
-							font-size: 18px;
-							color: #ffffff;
-							background: #359381;
-							width: 387px;
+							border       : none;
+							font-weight  : 600;
+							height       : 45px;
+							font-size    : 18px;
+							color        : #ffffff;
+							background   : #359381;
+							width        : 387px;
 							border-radius: 9px;
 						}
 					}
