--- a/src/containers/ProductPage/Section/Product.scss
+++ b/src/containers/ProductPage/Section/Product.scss
@@ -40,12 +40,33 @@
 		}
 
 		.cart {
-			align-content: center;
-			width        : 5%;
+			display        : flex;
+			justify-content: center;
+			align-items    : center;
+			width          : 60px;
+			height         : 85px;
+			transition     : all 0.3s ease-in-out;
 
 			i {
-				color    : white;
-				font-size: 24px;
+				color     : white;
+				font-size : 28px;
+				/* Tăng kích thước icon */
+				transition: color 0.3s ease-in-out;
+				/* Hiệu ứng chuyển đổi màu icon */
+
+				&:hover {
+					background-color:#45625D;
+					/* Đổi màu nền khi hover */
+					transform       : scale(1.2);
+					/* Phóng to nhẹ khi hover */
+				}
+			}
+
+
+
+			&:hover i {
+				color: #359381;
+				/* Đổi màu icon sang vàng khi hover */
 			}
 		}
 	}
@@ -77,7 +98,7 @@
 					background-attachment: local !important;
 					background-size      : cover;
 					position             : relative !important;
-					height               :100%;
+					height               : 100%;
 					width                : 95%;
 
 					background-position: center;
