--- a/src/containers/Donate/CheckOut/Section/Cart.scss
+++ b/src/containers/Donate/CheckOut/Section/Cart.scss
@@ -92,6 +92,8 @@
 											background: white;
 											font-size : 24px;
 											cursor    : pointer;
+											transition: color 0.3s ease;
+
 										}
 									}
 								}
@@ -258,6 +260,10 @@
 					p {
 						color: #3F845B;
 
+						&:hover {
+							color: #7f036a;
+							/* Thay đổi màu chữ khi hover */
+						}
 					}
 				}
 			}
@@ -314,10 +320,16 @@
 							font-weight  : 600;
 							height       : 45px;
 							font-size    : 18px;
-							color        : #ffffff;
+							color        : white;
 							background   : #359381;
 							width        : 387px;
 							border-radius: 9px;
+							transition   : background-color 0.3s ease, transform 0.3s ease;
+
+							&:hover {
+								background: #31b098;
+								transform : scale(1.05);
+							}
 						}
 					}
 
