csss vs language

--- a/src/containers/HomePage/Section/EthicalStandards.scss
+++ b/src/containers/HomePage/Section/EthicalStandards.scss
@@ -11,6 +11,7 @@
         flex-direction: row;
         .left-content{
             width: 50%;
+            padding-right: 38px;
             display: flex;
             flex-direction: column;
             justify-content: center;
