--- a/src/containers/HomePage/Section/Calculator.scss
+++ b/src/containers/HomePage/Section/Calculator.scss
@@ -41,6 +41,7 @@
                 font-weight: 550;
                 cursor: pointer;
                 transition: all 0.3s;
+                z-index: 10;
                 &:hover{
                     background-color: #bdbdbd;
                 }
