--- a/src/containers/HomePage/Section/Join.scss
+++ b/src/containers/HomePage/Section/Join.scss
@@ -49,6 +49,7 @@
                 font-size: 1.5rem;
                 font-weight: 500;
                 cursor: pointer;
+                z-index: 10;
                 transition: all 0.3s;
                 &:hover{
                     background-color: #577c76;
